--- a/style.css
+++ b/style.css
@@ -1,88 +1,48 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
+*{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
-#myname{
-    padding: 0 0 0 20px;
+li{
+    list-style: none;
 }
 
-#navbar>nav>div{
-    display: inline-block;
-    font-size: larger;
-}
-
-#dropdownItems, #navbar{
-    width: 100%;
-}
-
-#navbar{
-    padding: 20px 0 0;
-    background-color: white;
-}
-
-#links{
-    float: right;
-    visibility: hidden;
-}
-
-#links a, #dropdownItems a{
-    padding: 0 10px;
+a{
     text-decoration: none;
-    color: rgb(52, 51, 51);
 }
 
-footer{
-    background-color: black;
-    color: lightgray;
-    bottom: 0px;
-    padding: 0;
+.hidden *{
+    visibility: hidden;
+    height: 0;
 }
 
 #home{
     background-image: url("https://img.freepik.com/free-photo/design-space-paper-textured-background_53876-42312.jpg?w=2000")
 }
 
-#home{
-    text-align: center;
-}
-
-
-#home>h1, #home>p{
-    padding: 0 20px;
-}
-
-#home>h1{
-    padding: 100px 0 20px;
-    font-size: 50px;
-    margin: 0px;
-}
-
-#home>p{
-    font-size: large;
-}
-
-#home>p:nth-child(3){
-    padding-bottom: 100px;
-}
-
-#dropdownItems ul{
-    margin: 0px;
-    padding: 0;
-}
-
-#dropdownItems li{
-    list-style: none;
+.nav-item{
     text-align: right;
-    padding: 15px 20px;
     border-top: 1px solid darkgray;
 }
 
-#dropdownItems{
-    padding: 20px 0 0;
+.navbar-nav .nav-item:last-child>a{
+    padding-bottom: 0;
 }
 
-#dropdown>img{
-    visibility: hidden;
+.nav-item a{
+    padding-right: 12px;
 }
+
+
+@media (min-width: 991.98px) { 
+    .nav-item{
+        border: none;
+    }
+
+    .nav-item a{
+       font-size: larger;
+    }
+}
+
