--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ a{
 }
 
 #about, #contacts{
-    background-color: rgba(var(--bs-tertiary-bg-rgb));
+    background-color: rgba(var(--bs-tertiary-bg-rgb))!important;
 }
 
 .scroll{
@@ -124,6 +124,10 @@ a{
 .arrow span:nth-child(3) {
     animation-delay: -.4s;
 }
+.dropdown-menu > li{
+    color: var(--bs-nav-link-color)!important;
+}
+
 
 @keyframes scroll1 {
     0% {
@@ -144,8 +148,17 @@ a{
         border: none;
     }
 
-    .nav-item a{
-       font-size: larger;
+    .nav-item a, .dropdown-toggle{
+       font-size: larger!important;
     }
+}
+
+@media (max-width: 991.98px) { 
+    .dropdown-menu{
+        border: none!important;
+        text-align: right!important;
+    }
+
+
 }
 
